# Otus_proffesional_homework_CICD

./: .gitmodules  CMakeLists.txt  CMakeLists.txt.in  README.md  main.cpp
.github/workflows/: HW_1_action.yml  Linux.yml  MacOS.yml  Windows.yml  runner.yml  test_check.yml
src/: lib.cpp  main.cpp
test/: test.cpp
